added apps page with all app data

--- a/public/appData.json
+++ b/public/appData.json
@@ -1,6 +1,6 @@
 [
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg",
+    "image": "https://i.ibb.co.com/TMfpVYs6/1.png",
     "title": "Spotify Music",
     "companyName": "Spotify Ltd.",
     "id": 1001,
@@ -18,7 +18,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg",
+    "image": "https://i.ibb.co.com/JWz32FvS/2.png",
     "title": "Instagram",
     "companyName": "Meta Platforms, Inc.",
     "id": 1002,
@@ -36,7 +36,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg",
+    "image": "https://i.ibb.co.com/N2nr1B2k/3.png",
     "title": "WhatsApp Messenger",
     "companyName": "WhatsApp LLC",
     "id": 1003,
@@ -54,7 +54,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg",
+    "image": "https://i.ibb.co.com/M5Mt6tXr/4.png",
     "title": "Netflix",
     "companyName": "Netflix, Inc.",
     "id": 1004,
@@ -72,7 +72,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/en/6/69/TikTok_logo.svg",
+    "image": "https://i.ibb.co.com/23TLKKD4/5.png",
     "title": "TikTok",
     "companyName": "ByteDance Ltd.",
     "id": 1005,
@@ -90,7 +90,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/c/c4/Snapchat_logo.svg",
+    "image": "https://i.ibb.co.com/21RZVxPd/6.png",
     "title": "Snapchat",
     "companyName": "Snap Inc.",
     "id": 1006,
@@ -108,7 +108,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg",
+    "image": "https://i.ibb.co.com/d0t1fS1r/7.png",
     "title": "YouTube",
     "companyName": "Google LLC",
     "id": 1007,
@@ -126,7 +126,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/en/6/60/Twitter_Logo_as_of_2021.svg",
+    "image": "https://i.ibb.co.com/Y7BGgmRW/8.png",
     "title": "X (Twitter)",
     "companyName": "X Corp.",
     "id": 1008,
@@ -144,7 +144,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/9/99/Google_Maps_logo.svg",
+    "image": "https://i.ibb.co.com/C5GR5YpH/9.png",
     "title": "Google Maps",
     "companyName": "Google LLC",
     "id": 1009,
@@ -162,7 +162,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg",
+    "image": "https://i.ibb.co.com/MkSrx1KF/10.png",
     "title": "Telegram",
     "companyName": "Telegram FZ-LLC",
     "id": 1010,
@@ -180,7 +180,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/5/5f/Zoom_Communications_logo.svg",
+    "image": "https://i.ibb.co.com/20KPSJyd/11.png",
     "title": "Zoom Meetings",
     "companyName": "Zoom Video Communications, Inc.",
     "id": 1011,
@@ -198,7 +198,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_B%C3%A9lo.svg",
+    "image": "https://i.ibb.co.com/TD6v66x5/12.png",
     "title": "Airbnb",
     "companyName": "Airbnb, Inc.",
     "id": 1012,
@@ -216,7 +216,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/a/a6/Canva_Logo.png",
+    "image": "https://i.ibb.co.com/nM6KMvYB/13.png",
     "title": "Canva",
     "companyName": "Canva Pty Ltd",
     "id": 1013,
@@ -234,7 +234,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/0/0b/Uber_Logo_2018.svg",
+    "image": "https://i.ibb.co.com/s9mdvymH/14.png",
     "title": "Uber Eats",
     "companyName": "Uber Technologies, Inc.",
     "id": 1014,
@@ -252,7 +252,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/7/72/Duolingo_logo.svg",
+    "image": "https://i.ibb.co.com/jvbfBDYR/15.png",
     "title": "Duolingo",
     "companyName": "Duolingo, Inc.",
     "id": 1015,
